飲料大哥大

--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DrinkConsoleApp.cpp" />
+    <ClCompile Include="Drinkitem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Drinkitem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
