--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj.filters
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="DrinkConsoleApp.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="Drinkitem.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Drinkitem.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
