--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Drinkitem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DrinkConsoleApp.h" />
     <ClInclude Include="Drinkitem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
