--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj.filters
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Drinkitem.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="DrinkConsoleApp.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
