--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj.filters
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClCompile Include="Drinkitem.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="Orderitem.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Drinkitem.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="DrinkConsoleApp.h">
+    <ClInclude Include="Orderitem.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
