--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj
@@ -136,6 +136,9 @@
     <ClInclude Include="Drinkitem.h" />
     <ClInclude Include="Orderitem.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="order.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
