--- a/DrinkConsoleApp/DrinkConsoleApp.vcxproj
+++ b/DrinkConsoleApp/DrinkConsoleApp.vcxproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="order.txt" />
+    <Text Include="drinks.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
